--- a/dom/templates/dom/content_center/zagolovok.html
+++ b/dom/templates/dom/content_center/zagolovok.html
@@ -54,7 +54,7 @@
             <a href="#" type="button" class="btn btn-outline-success btn-lg btn-block">Купить</a>
         </div>
          <div class="col sm-4">
-             <a href="#" type="button" class="btn btn-outline-success btn-lg btn-block">Заработать</a>
+             <a href="/partneri/" type="button" class="btn btn-outline-success btn-lg btn-block">Заработать</a>
 
         </div>
     </div>
