--- a/urokipy/templates/urokipy/menu.html
+++ b/urokipy/templates/urokipy/menu.html
@@ -3,7 +3,7 @@
         <a href="/admin/" class="brand-logo"><i class="material-icons">cloud</i>Администратор</a>
         <ul class="right hide-on-med-and-down">
             <li><a href="{% url 'spisok' %}">Памятки</a></li>
-            <li><a href="badges.html">Components</a></li>
+            <li><a href="/">Главная</a></li>
             <!-- Dropdown Trigger -->
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
 
