--- a/partner/templates/partner/home.html
+++ b/partner/templates/partner/home.html
@@ -49,7 +49,7 @@
         <div class="col s2">
             <p>Переходы</p>
             <hr>
-
+{% include 'dom/menu.html' %}
         </div>
         <div class="col s8">
             <h3>Коротко о главном</h3>
@@ -60,24 +60,44 @@
                             услуги которую выполняет для заказчика. Условия выполнения той или иной услуги в точности
                             прописаны на страницах сайта.</p>
                     <h6>!. Стоимость услуги </h6>
-                        <p>Цена за услугу указана на сайте. Повышать стоимость запрещено.
+                        <p>Бесплатно - до трех объявлений.(необходимо подать бесплатное заявление партнеру сайта).
+                            За деньги(2000 рублей). В стоимость входит выполнение следующих работ: фотосъемка объекта,
+                            форматирование фотографий, написание продающего текста объявления, размещение на сайте,
+                            передача электронным способом артикула объявления заказчику. Свыше 5-ти километров до
+                            объекта возможны дополнительые расходы на транспорт.Цена за услугу указана на сайте.
+                            Повышать стоимость запрещено. Удобно для тех кто продает удаленно, за оплату
+                            всю работу по размещению объявления сделает партнер сайта.
                         </p>
             <h6>!.Почему у сайта простой дизайн?</h6>
                         <p>Покупка и продажа недвижимости очень важный вопрос требующий серьезного отношения,
                         данный сайт - это программа написана на добровольной основе без получения прибыли, на пользу
-                            людям для обмена информацией, отсутствуют дополнительные расходы. Поднятие объявлений на странице поиска,
-                            происходит рандомно(случайный выбор). Денежные вознаграждения от посетителей принимаются
-                            в ввиде благотворительности и по желанию. Помог сайт - скажи спасибо в виде перевода.
+                            людям для обмена информацией, для пользователя отсутствуют дополнительные расходы. Поднятие
+                            объявлений на странице поиска, происходит рандомно(случайный выбор). Денежные вознаграждения
+                            от посетителей принимаются в ввиде благотворительности и по желанию.
+                            Помог сайт - скажи спасибо создателям в виде перевода.
                         </p>
-            <h6>!. Риэлтор может размещать фото объектов недвижимости. </h6>
+            <h6>!. Риэлтор может размещать фото объектов недвижимости? </h6>
                         <p>Да. Дополнительно для агентов по недвижимости в бесплатном личном кабинете, можно подключить,
                             платные услуги сторнних сайтов. Оплата на этом сайте такая же как и для всех.
                             Первые три объекта - бесплатно. Оплата следующих идет на содержание сайта. Подписываем договор.
                         </p>
             <h6>!. Кто продает недвижимость? </h6>
                         <p>В составлении объявления присутсвует строка продавца. От собственника, агенство, помошник.
-                        Для подачи объявления необходимо заявление на размещение и предъявление паспорта партнеру сайта.
-                        Эти простые действия неоходимы </p>
+                            Эта строка заполняется партнером сайта, после проверки документов на собственность.
+                        Для подачи объявления необходимо заявление на размещение и предъявление паспорта живому человеку
+                            - партнеру сайта. Эти простые действия, дают уверенность , что объявление разместил
+                        реальный человек.</p>
+            <h6>!. Как стать парнером сайта? </h6>
+                        <p>Очень просто. Телефонный звонок администратору. Расскажите что Вы умеете делать.
+                        Предоставте выполненную работу. Ничего не умеете , но очень хотите - приветсвуется.
+                        Поможем. Предоставим обучающие материалы. Оценим результат Вашей работы.
+                        Сделанно качественно - подходите.</p>
+            <h6>!. Налоги </h6>
+                        <p>Сайт - это программа. Программа не может Вас принять на работу или уволить. Вы самостоятельно
+                            определяете действия по оплате налогов.</p>
+            <h6>!. Стоимость услуги </h6>
+                        <p>-------------------------------
+                        че</p>
             <h6>!. Стоимость услуги </h6>
                         <p>-------------------------------
                         че</p>
