--- a/dom/templates/dom/pokaz/adres_list.html
+++ b/dom/templates/dom/pokaz/adres_list.html
@@ -11,21 +11,34 @@
 </head>
 <body>
 
+<div class="container mt-3">
+<a href="/" class="btn btn-outline-success">На главную</a>
+</div>
 
 
+<div class="container mt-3">
+    <div class="row">
+        <div class="col sm-12">
 
-{% for dom in doma %}
+            <form action="{% url 'search' %}" method="get">
+                <input name="q" type="text" placeholder="Найти..." >
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="container mt-3">
+
+{% for dom in object_list %}
 
 <div class="w3-col m4 l3 w3-margin-left">
     <div class="w3-card-4 w3-section">
         <div class="w3-container w3-success">
 
             <img src="#" class="card-img-top" alt="Рисунок">
-
-                <p class="card-title">1{{ dom.name_krai }}</p>
-
-
-
+            <p class="card-title">{{ dom.price }}</p>
+            <p class="card-title">1{{ dom.name_krai }}</p>
             <p>1{{ dom.name_krai }}</p>
             <p class="card-text">2{{ dom.gorod }}</p>
             <p>3{{ dom.raion }}</p>
@@ -36,6 +49,7 @@
 
 
             <a href="/dom/adresa/{{ dom.slug }}">Ссылка1</a>
+
 
             {% if dom.is_activ %}
             <p>9Размещен на сайте</p>
@@ -52,9 +66,6 @@
             {% if  dom.is_arenda  %}
             <p>12Аренда</p>
             {% endif %}
-
-
-
             <p>13{{ dom.descreption }}</p>
             <p>14{{ dom.arti_dokument }}</p>
 
@@ -65,9 +76,27 @@
         </div>
     </div>
 {% endfor%}
+</div>
 
 
+<div class="container">
+    <div class="row">
+        <div class="col sm-12">
 
+
+        <ul>
+            {% for city in object_list %}
+            <li>
+                {{ city.price }}, {{ city.gorod }}
+
+                <a href="/dom/adresa/{{ city.slug }}">Ссылка</a>
+            </li>
+            <hr>
+            {% endfor %}
+        </ul>
+            </div>
+    </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
