--- a/dom/templates/dom/pokaz/adres_list.html
+++ b/dom/templates/dom/pokaz/adres_list.html
@@ -1,31 +1,77 @@
-<!DOCTYPE html>
+----------------------------------------------------------------------------------------------------------
+<!-- Подключаем страницу index приложения dom базовый шаблон на boostrap 5 -->
+{% extends 'dom/index.html' %}
 {% load static %}
-<html lang="ru">
-<head>
-    {% block metaname %}
-    <meta charset="UTF-8">
+<!-- Блок мета для каждой страницы можно изменить мета -->
+{% block metaname %}
+<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static '/boostrap5/css/bootstrap.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="{% static '/bootstrap-icons-1.3.0' %}">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    {% endblock  %}
-    {% block title %}list_adres{% endblock title %}
-</head>
-<body>
+{% endblock  %}
+
+<!--     Блок заголовка страницы   -->
+{% block title %}Список объектов{% endblock title %}
 
 
+<!-- Блок для сообщений -->
+{% block verx %}
+
+{% endblock verx %}
+
+
+
+<!-- блок авторизации пользователя-->
+{% block auntifikate %}
+<div class="container mt-3 bg-success ">
+    <div class="row">
+        {% if user.is_authenticated %}
+        <div class="col-sm-2">
+            <p class="badge badge-success mt-3"> Благополучия {{ user.username }}!
+                <a href="{% url 'logout' %}" class="badge badge-light">Выход из учетной записи</a></p>
+
+        </div>
+        {% else %}
+        <a href="{% url 'index' %}" class="badge badge-success">Смотреть как гость</a>
+        <div class="col-sm-3">
+            <a href="{% url 'login' %}" class="badge badge-success">Войти</a>
+            {% block main %}
+            {% endblock %}
+
+            <a href="{% url 'signup' %}" class="badge badge-success">Зарегистрироваться</a>
+            {% block registr %}
+            {% endblock registr %}
+        </div>
+        {% endif %}
+
+    </div>
+</div>
+    {% endblock %}
+
+
+<!-- Панель меню -->
+{% block menu %}
+
+{% include "dom/menu.html" %}
+
+{% endblock menu %}
+
+
+{% block content_center %}
 
 <div class="container">
     {% for dom in object_list %}
+
     {% if dom.is_activ %}
     <div class="w3-col m4 l3 w3-margin-left">
         <div class="w3-card-4 w3-section">
             <div class="w3-container w3-success">
                 <p class="card-text">Город: {{ dom.gorod }}</p>
                 {% if dom.minimage %}
-                <img src="{{ dom.minimage.url }}" alt="" height="150" width="150">
+                <img src="{{ dom.minimage.url }}" class="img-thumbnail" alt="" height="150" width="150">
                 {% endif %}
                 <div class="dropdown">
 
@@ -41,104 +87,32 @@
 </div>
 
 
+{% endblock content_center %}
 
 
-<div class="container mt-3">
-    <a href="/" class="btn btn-outline-success">На главную</a>
-</div>
+<!--Блок низ сайта-->
+{% block footer %}
+<hr>
+<hr>
+{% endblock footer %}
 
 
-<div class="container mt-3">
-    <div class="row">
-        <div class="col sm-12">
-
-            <form action="{% url 'search' %}" method="get">
-                <input name="q" type="text" placeholder="Найти..." >
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
-            </form>
-        </div>
-    </div>
-</div>
-
-<div class="container mt-3">
-
-    {% for dom in object_list %}
-    {% if dom.is_activ %}
-    <div class="w3-col m4 l3 w3-margin-left">
-        <div class="w3-card-4 w3-section">
-            <div class="w3-container w3-success">
-                {% if dom.minimage %}
-                <img src="{{ dom.minimage.url }}" alt="" height="150" width="150">
-                {% endif %}
-
-                <p class="card-title">{{ dom.price }}</p>
-                 <i class="bi-alarm" style="font-size: 2rem; color: cornflowerblue;"></i>
-                <p><i class="bi-alarm" style="font-size: 1rem; color: cornflowerblue;"></i>{{ dom.name_krai }}</p>
-                <p class="card-text">2{{ dom.gorod }}</p>
-                <p>3{{ dom.raion }}</p>
-                <p>4{{ dom.street }}</p>
-                <p>5{{ dom.n_doma }}</p>
-                <p>6{{ dom.n_kvartiri }}</p>
-                <p>7{{ dom.n_podezda }}</p>
-
-
-                <a href="/dom/adresa/{{ dom.slug }}">Ссылка1</a>
-
-
-                {% if dom.is_activ %}
-                <p>9Размещен на сайте</p>
-                {% endif %}
-
-                {% if  dom.is_prodaju  %}
-                <p>10Продается</p>
-                {% endif %}
-
-                {% if  dom.is_prodano  %}
-                <p>11Продан</p>
-                {% endif %}
-
-                {% if  dom.is_arenda  %}
-                <p>12Аренда</p>
-                {% endif %}
-                <p>13{{ dom.descreption }}</p>
-                <p>14{{ dom.arti_dokument }}</p>
-
-
-                <hr>
-            </div>
-            {% endif %}
-        </div>
-    </div>
-    {% endfor%}
-</div>
-
-
-<div class="container">
-    <div class="row">
-        <div class="col sm-12">
-
-
-            <ul>
-                {% for city in object_list %}
-                <li>
-                    {{ city.price }}, {{ city.gorod }}
-
-                    <a href="/dom/adresa/{{ city.slug }}">Ссылка</a>
-                </li>
-                <hr>
-                {% endfor %}
-            </ul>
-        </div>
-    </div>
-</div>
-
-
-
+<!--Блок для размещения скриптов-->
+{% block script %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 
 
-</body>
-</html>
+<script>
+$(document).ready(function(){
+  $('[data-toggle="popover"]').popover();
+});
+</script>
 
+{% endblock script%}
+
+<hr>
+<hr>
+<hr>
+<hr>
