--- a/dom/templates/dom/index.html
+++ b/dom/templates/dom/index.html
@@ -143,7 +143,7 @@
         </div>
         <!-- вторая -->
         <div class="col sm-4">
-            <a href="#" type="button" class="btn btn-outline-success btn-lg btn-block">Купить</a>
+            <a href="{% url 'adresa' %}" type="button" class="btn btn-outline-success btn-lg btn-block">Купить</a>
         </div>
         <!-- первая -->
         <div class="col sm-4">
