--- a/partner/templates/partner/uslugi.html
+++ b/partner/templates/partner/uslugi.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div class="container mt-5">
+    <div class="row">
+        <!-- первая -->
+        <div class="col sm-12">
+            <div class="container">
 
-</body>
-</html>
+                <div class="card">
+                    <h3 class="card-title">Услуга: {{ usluga.gorodok }}</h3>
+                        {% if adresa.minimage %}
+                        <img src="{{ adresa.minimage.url }}" alt="{{ adresa.name_krai }}" height="150" width="150">
+                        {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<hr>
+
+{% for us in usluga %}
+{{ us.gorodok }}
+{% endfor %}
+
+
+aaaaa
+<hr><hr>
