--- a/accounts/templates/registration/signup.html
+++ b/accounts/templates/registration/signup.html
@@ -1,8 +1,9 @@
 {% extends 'dom/index.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Sign Page{% endblock title %}
-{% block registr %}
+{% block title %}Регистрация{% endblock title %}
+
+{% block auntifikate %}
 <div class="card">
 <div class="card-body">
 <h4 class="card-title">Простая регистрация</h4>
@@ -16,6 +17,6 @@
     </form>
     </div>
 </div>
-{% endblock registr %}
+{% endblock %}
 
 
