--- a/dom/templates/dom/index.html
+++ b/dom/templates/dom/index.html
@@ -139,7 +139,7 @@
     <div class="row">
         <!-- первая -->
         <div class="col sm-4">
-            <a href="#" type="button" class="btn btn-outline-success btn-lg btn-block">Продать</a>
+            <a href="{% url 'prodaja' %}" type="button" class="btn btn-outline-success btn-lg btn-block">Продать</a>
         </div>
         <!-- вторая -->
         <div class="col sm-4">
@@ -147,7 +147,7 @@
         </div>
         <!-- первая -->
         <div class="col sm-4">
-            <a href="/partneri/" type="button" class="btn btn-outline-success btn-lg btn-block">Заработать</a>
+            <a href="{% url 'partneram' %}" type="button" class="btn btn-outline-success btn-lg btn-block">Заработать</a>
         </div>
     </div>
 </div>
