--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,13 +1,13 @@
 <!-- templates/registration/login.html -->
-{% extends 'base.html' %}
+{% extends 'dom/index.html' %}
 
 {% block title %}Log In{% endblock %}
 
-{% block content %}
-<h2>Log In</h2>
+{% block auntifikate %}
+<h2>Вход</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Log In</button>
+  <button type="submit">Войти</button>
 </form>
-{% endblock %}
+ {% endblock %}
